--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   intl: ^0.20.2
+  google_fonts: ^6.3.2
+  path_provider: ^2.1.0
 
 dev_dependencies:
   flutter_test:
