--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,10 @@ dependencies:
   intl: ^0.20.2
   google_fonts: ^6.3.2
   path_provider: ^2.1.0
+  firebase_core: ^2.24.2
+  firebase_messaging: ^14.7.9
+  flutter_local_notifications: ^18.0.1
+  http: ^1.2.2  # 👈 이 줄 추가
 
 dev_dependencies:
   flutter_test:
